--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
   <head>
     <title>YeeHonk</title>
     <link href="stylehonk.css" type="text/css" rel="stylesheet">
+    <script
+          src="https://code.jquery.com/jquery-3.2.1.min.js"
+          integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+          crossorigin="anonymous"></script>
     <script src="script.js" defer> </script>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
+
   <body>
     <img src="Images/duck.png" id="duck">
     <div id="animate">
       <img src="Images/cowboyHat.png">
-  </div>
+    </div>
   </body>
 </html>
